Thu May 18 12:11:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added support for using RSets with the network matches

	* Better timeouts when remote end unresponsive

Thu May 18 11:20:58 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test that setting an rset has appropriate effect on match
	  results (relevant document comes to top).

Thu May 18 11:15:36 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added new exception OmInternalError for really weird problems.

Wed May 17 18:12:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added simple test for RSet usage.

Wed May 17 17:52:22 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix memory leak in rset.cc

Wed May 17 17:26:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* BM25Weight and TradWeight now ask their statssource for information
	  about the RSet, rather than asking the rset directly.  As a result,
	  they no longer have or need an "RSet * rset" member.

Wed May 17 17:09:35 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* RSet now has a give_stats_to_statssource() method, used by
	  localmatch to pass the statistics to the stats system for
	  sharing and merging.

Wed May 17 15:56:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Pass relevance sets around as OmRSets, only creating an RSet within
	  LocalMatch.  RSet now has a method to tell it to calculate the
	  statistics, which is called after the query has been constructed,
	  paving the way for integration with StatsSources.

Wed May 17 15:56:36 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Ensure that the a refcount pointer is not made from a standard pointer
	  more than once.

Tue May 16 16:29:25 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* apitest now performs its own indexing for tests.  Next step is to
	  stop nettest using the internal indexing in InMemoryDatabase and